src/main/java/com/example/pairprogramming/user/error/NotTokenFormatException.java
package com.example.pairprogramming.user.error;

public class NotTokenFormatException extends RuntimeException{
}
